# claude-plugins

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_SETUP_SUMMARY.md  INSTALLATION.md  LICENSE  MIGRATION.md  QUICKSTART.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude-plugin/: marketplace.json
.claude/commands/: update-docs.md  validate-marketplace.md
.github/: BRANCH_PROTECTION_SETUP.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-tag.yml  branch-protection.yml  deploy-docs.yml  greetings.yml  markdown-link-check-config.json  pr-labels.yml  stale.yml  validate-plugins.yml
community/: index.html
community/changelog/: index.html
community/code-of-conduct/: index.html
community/external-resources/: index.html
community/migration/: index.html
development/: index.html
docs/: PLUGIN_DEVELOPMENT.md  index.md
getting-started/: index.html
guides/: index.html
plugins/: index.html
plugins/gemini-bridge/: .mcp.json  README.md  index.html  pyproject.toml
plugins/gemini-bridge/.claude-plugin/: plugin.json
plugins/gemini-bridge/agents/: gemini-analyst.md  model-router.md
plugins/gemini-bridge/commands/: analyze.md  compare.md  vision.md
plugins/gemini-bridge/gemini_bridge/: __init__.py  server.py
plugins/gemini-bridge/skills/gemini-analyst/: SKILL.md
plugins/gemini-bridge/tests/: test_server.py
reference/: index.html
search/: search_index.json
(+239 files in other folders)
